[gd_scene load_steps=2 format=3 uid="uid://ngsp2w8gaoo2"]

[ext_resource type="Script" path="res://Scenes/u_ijogo.gd" id="1_oafre"]

[node name="UIjogo" type="CanvasLayer"]
script = ExtResource("1_oafre")

[node name="Objetivo" type="TextEdit" parent="."]
modulate = Color(0, 1, 1, 1)
offset_left = 14.0
offset_top = 22.0
offset_right = 743.0
offset_bottom = 102.0
placeholder_text = "Objetivo"

[node name="LabelDireito" type="Label" parent="."]
modulate = Color(0, 1, 1, 1)
offset_left = 750.0
offset_top = 13.0
offset_right = 1496.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 25
text = "Aperte WASD para se Mover 
Aperte E ou Espaço para interagir com objetos
Aperte Esc para voltar ao menu"

[node name="CaixaEsquerda" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OQueAprendeu" type="Label" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 6.0
offset_top = 695.0
offset_right = 488.0
offset_bottom = 718.0
text = "O que Aprendeu"

[node name="ButtonAndar" type="Button" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 6.0
offset_top = 722.0
offset_right = 76.0
offset_bottom = 761.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
text = "Andar"
alignment = 0

[node name="ButtonBola" type="Button" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 88.0
offset_top = 722.0
offset_right = 162.0
offset_bottom = 761.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
text = "Bola"
alignment = 0

[node name="ButtonPegar" type="Button" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 169.0
offset_top = 723.0
offset_right = 241.0
offset_bottom = 762.0
size_flags_horizontal = 0
action_mode = 0
text = "Pegar"
alignment = 0

[node name="ButtonLargar" type="Button" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 250.0
offset_top = 723.0
offset_right = 322.0
offset_bottom = 763.0
size_flags_horizontal = 0
action_mode = 0
text = "Largar"
alignment = 0

[node name="ButtonCirculo" type="Button" parent="CaixaEsquerda"]
layout_mode = 2
offset_left = 333.0
offset_top = 723.0
offset_right = 411.0
offset_bottom = 763.0
size_flags_horizontal = 0
action_mode = 0
text = "Circulo"
alignment = 0

[node name="ButtonChave" type="Button" parent="CaixaEsquerda"]
layout_mode = 0
offset_left = 415.0
offset_top = 723.0
offset_right = 484.0
offset_bottom = 763.0
text = "Chave"

[node name="ButtonFechadura" type="Button" parent="CaixaEsquerda"]
layout_mode = 0
offset_left = 6.0
offset_top = 773.0
offset_right = 96.0
offset_bottom = 807.0
text = "Fechadura"

[node name="ButtonAgrupar" type="Button" parent="CaixaEsquerda"]
layout_mode = 0
offset_left = 101.0
offset_top = 773.0
offset_right = 191.0
offset_bottom = 807.0
text = "Agrupar"

[node name="ButtonTrabalhar" type="Button" parent="CaixaEsquerda"]
layout_mode = 0
offset_left = 197.0
offset_top = 774.0
offset_right = 287.0
offset_bottom = 808.0
text = "Trabalhar"

[node name="CaixaMeio" type="VBoxContainer" parent="."]
offset_left = 488.0
offset_top = 695.0
offset_right = 1000.0
offset_bottom = 891.0

[node name="Comandos" type="TextEdit" parent="CaixaMeio"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Faça Seus Comandos"

[node name="ResetarComandos" type="Button" parent="."]
offset_left = 1003.0
offset_top = 693.0
offset_right = 1497.0
offset_bottom = 801.0
text = "Resetar Comandos"

[connection signal="pressed" from="CaixaEsquerda/ButtonAndar" to="." method="_on_button_andar_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonBola" to="." method="_on_button_bola_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonPegar" to="." method="_on_button_pegar_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonLargar" to="." method="_on_button_largar_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonCirculo" to="." method="_on_button_circulo_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonChave" to="." method="_on_button_chave_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonFechadura" to="." method="_on_button_fechadura_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonAgrupar" to="." method="_on_button_agrupar_pressed"]
[connection signal="pressed" from="CaixaEsquerda/ButtonTrabalhar" to="." method="_on_button_trabalhar_pressed"]
[connection signal="pressed" from="ResetarComandos" to="." method="_on_resetar_comandos_pressed"]
